--- a/templates/index.html
+++ b/templates/index.html
@@ -63,11 +63,8 @@
 									<li class="spid-idp-button-link" data-idp="timid">
 										<button class="idp-button-idp-logo" name="tim_id" type="submit"><span class="spid-sr-only">Tim ID</span><img class="spid-idp-button-logo" src="img/spid-idp-timid.svg" onerror="this.src='img/spid-idp-timid.png'; this.onerror=null;" alt="Tim ID" /></button>
 									</li>
-									<li class="spid-idp-button-link" data-idp="testlocaleid">
-										<button class="idp-button-idp-logo" name="testlocale_id" type="submit"><span class="spid-sr-only">Test Locale ID</span><img class="spid-idp-button-logo" src="img/spid-idp-testlocale.svg" onerror="this.src='img/spid-idp-testlocale.png'; this.onerror=null;" alt="Test Locale" /></button>
-									</li>
-									<li class="spid-idp-button-link" data-idp="testonlineid">
-										<button class="idp-button-idp-logo" name="testonline_id" type="submit"><span class="spid-sr-only">Test Online ID</span><img class="spid-idp-button-logo" src="img/spid-idp-testonline.svg" onerror="this.src='img/spid-idp-testonline.png'; this.onerror=null;" alt="Test Online" /></button>
+									<li class="spid-idp-button-link" data-idp="testid">
+										<button class="idp-button-idp-logo" name="test_id" type="submit"><span class="spid-sr-only">Test Locale ID</span><img class="spid-idp-button-logo" src="img/spid-idp-test.svg" onerror="this.src='img/spid-idp-test.png'; this.onerror=null;" alt="Test" /></button>
 									</li>
 									<li class="spid-idp-support-link" data-spidlink="info">
 										<a href="https://www.spid.gov.it">Maggiori informazioni</a>
