--- a/templates/css/default.css
+++ b/templates/css/default.css
@@ -1,5 +1,5 @@
 body {
-	font-family: sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	background-color: #f5f5f5;
 	overflow-y: scroll;
 }
