--- a/templates/data.html
+++ b/templates/data.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<meta charset="utf-8">
-	<title>SPID Template</title>
+	<title>SPID</title>
 
 	<link type="text/css" rel="stylesheet" href="css/default.css" />
 
@@ -16,10 +16,6 @@
 			</div>
 
 			<div class="content">
-
-				<div class="logoutDiv">
-					<a href="/logout"><button class="logoutButton">Logout</button></a>
-				</div>
 
 				<!-- Data Visualization -->
 				<div class="divTable">
@@ -36,6 +32,10 @@
 							</tr>
 						{{ end }}
 					</table>
+				</div>
+				
+				<div class="logoutDiv">
+					<a href="/logout"><button class="logoutButton">Logout</button></a>
 				</div>
 
 			</div>
