--- a/templates/css/default.css
+++ b/templates/css/default.css
@@ -2,9 +2,6 @@ body {
 	font-family: "Times New Roman", Times, serif;
 	background-color: #f5f5f5;
 	overflow-y: scroll;
-}
-
-.main {
 	margin-top: 2%;
 	margin-left: 10%;
 	margin-right: 10%;
@@ -49,6 +46,7 @@ body {
 }
 
 .logoutDiv {
+	margin: 4% 0 0 0;
 	text-align: right;
 }
 
@@ -89,7 +87,6 @@ tr:nth-child(even) {
 
 .footer {
 	bottom: 0;
-	height: auto;
 	text-align: center;
 }
 
@@ -97,21 +94,25 @@ tr:nth-child(even) {
 	width: 40%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1200px) {
 	.content, .footer, .topheader {
 		margin-left: 0%;
 		margin-right: 0%;
 	}
 	.columnContentLeft {
-		width: 90%;
+		float: none;
+		width: 96%;
 		margin: 2%;
 	}
 	.columnContentRight {
-		width: 90%;
-		margin: 2%;
+		width: 100%;
+		margin: 6% 0;
 		text-align: center;
 	}
-	#headerlogo, #footerimg {
-		width: 100%;
+	#headerlogo {
+		width: 30%;
+	}
+	#footerimg {
+		width: 70%;
 	}
 }
