--- a/templates/error.html
+++ b/templates/error.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<meta charset="utf-8">
-	<title>SPID Template</title>
+	<title>SPID</title>
 
 	<link type="text/css" rel="stylesheet" href="css/default.css" />
 
@@ -17,15 +17,14 @@
 
 			<div class="content">
 
-				<div class="logoutDiv">
-					<a href="/"><button class="logoutButton">Home</button></a>
-				</div>
-
 				<!-- Data Visualization -->
 				<div class="divTable">
 					<h1>Qualcosa è andato storto.</h1><br>
 					<h1>Torna alla pagina di Home con l'apposito tasto.</h1>
-					<div style="margin-bottom: 10%;"></div>
+				</div>
+				
+				<div class="logoutDiv">
+					<a href="/"><button class="logoutButton">Home</button></a>
 				</div>
 
 			</div>
