--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SPID</title>
 
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+		
 	<link type="text/css" rel="stylesheet" href="css/spid-sp-access-button.min.css" />
 	<link type="text/css" rel="stylesheet" href="css/default.css" />
 
