--- a/templates/error.html
+++ b/templates/error.html
@@ -1,38 +1,47 @@
 <!doctype html>
-<html>
+<html lang="it">
+	
 	<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="theme-color" content="#0066cc"/>
+	<meta name="Description" content="Spid Project error">
 	<title>SPID</title>
-
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+	<link type="text/css" rel="stylesheet" href="css/spid-sp-access-button.min.css" />
 	<link type="text/css" rel="stylesheet" href="css/default.css" />
-
 	</head>
 
 	<body>
+		
+		<header>
+			<img id="headerlogo" src="logo/logo.png"  alt="Logo">
+		</header>
+		
+		<main>
+			<div class="wrapper">
+				<div class="container">
+					<div class="content">
 
-		<div class="topheader">
-			<img id="headerlogo" src="logo/logo.png">
-		</div>
+						<div class="divTable">
+							<h1>Qualcosa è andato storto.</h1><br>
+							<h1>Torna alla pagina di Home con l'apposito tasto.</h1>
+						</div>
 
-		<div class="content">
-
-			<!-- Data Visualization -->
-			<div class="divTable">
-				<h1>Qualcosa è andato storto.</h1><br>
-				<h1>Torna alla pagina di Home con l'apposito tasto.</h1>
+						<div class="logoutDiv">
+							<a href="/"><button class="logoutButton">Home</button></a>
+						</div>
+					</div>
+				</div>
 			</div>
-
-			<div class="logoutDiv">
-				<a href="/"><button class="logoutButton">Home</button></a>
+		</main>
+		
+		<footer>
+			<div class="footer">
+				<img id="footerimg" src="logo/spid-agid-logo-lb.png" alt="spid AgID Logo">
 			</div>
-
-		</div>
-
-		<div class="footer">
-			<img id="footerimg" src="logo/spid-agid-logo-lb.png">
-		</div>
+		</footer>
+		
 
 	</body>
 </html>
