--- a/templates/data.html
+++ b/templates/data.html
@@ -24,7 +24,7 @@
 					<div class="content">
 						<!-- Data Visualization -->
 						<div class="divTable">
-							<h3>Dati Utente</h3>
+							<h3>Dati Utente</h3><br>
 							<table>
 								<tr>
 									<th>Attributo</th>
