--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 	<title>SPID</title>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 	<link type="text/css" rel="stylesheet" href="css/spid-sp-access-button.min.css" />
+	<link type="text/css" rel="stylesheet" href="css/eidas-sp-access-button.min.css" />
 	<link type="text/css" rel="stylesheet" href="css/default.css" />
 	</head>
 		
@@ -23,17 +24,26 @@
 				<div class="container">
 					
 					<div class="content">
+						
+						<div class="contentText">
+							<p>SPID è il sistema di accesso che consente di utilizzare, con un'identità digitale unica, i servizi online della Pubblica Amministrazione dei privati cittadini.<br>
+							Se sei già in possesso di un'identità digitale, accedi con le credenziali del tuo gestore.<br>
+							Se non hai ancora un'identità digitale, richiedila ad uno dei gestori.</p>	
+						</div>
+						
 						<div class="row">
 
 							<div class="column left">
-								<p>SPID è il sistema di accesso che consente di utilizzare, con un'identità digitale unica, i servizi online della Pubblica Amministrazione dei privati cittadini.<br>
-								Se sei già in possesso di un'identità digitale, accedi con le credenziali del tuo gestore.<br>
-								Se non hai ancora un'identità digitale, richiedila ad uno dei gestori.</p><br>
+								
 								<p><a href="https://www.spid.gov.it/" target="_blank" rel="noreferrer">Maggiori Infomazioni su SPID</a><br>
 								<a href="https://www.spid.gov.it/richiedi-spid" target="_blank" rel="noreferrer">Non hai SPID ?</a></p>
+								<br>
+								<p>Sign in with a digital identity from another European Country</p>
+								
 							</div>
 
 							<div class="column right">
+								
 								<!-- AGID - SPID IDP BUTTON MEDIUM "ENTRA CON SPID" * begin * -->
 								<form name="spid_idp_access" action="/spid-login" method="post">
 									<a class="italia-it-button italia-it-button-size-m button-spid" spid-idp-button="#spid-idp-button-medium-post" aria-haspopup="true" aria-expanded="false">
@@ -88,6 +98,16 @@
 									</div>
 								</form>
 								<!-- AGID - SPID IDP BUTTON MEDIUM "ENTRA CON SPID" * end * -->
+								
+								<!-- AGID - EIDAS IDP BUTTON MEDIUM "ENTER WITH EIDAS" * begin * -->
+								<form id="eidas_form" name="eidas_idp_access" action="/spid-login" method="post">
+									<input type="hidden" name="eid_id" value="eid_id" />
+									<a href="javascript:;" onclick="document.getElementById('eidas_form').submit();" class="italia-it-button italia-it-button-size-m button-eidas" eidas-idp-button="#eidas-idp-button-medium-post" aria-haspopup="false" aria-expanded="false">
+										<span class="italia-it-button-icon"><img src="img/ficep-it-eidas-ybw.svg" onerror="this.src='img/ficep-it-eidas-ybw.png'; this.onerror=null;" alt="" /></span>
+										<span class="italia-it-button-text">Login with eIDAS</span>
+									</a>
+								</form>
+								<!-- AGID - EIDAS IDP BUTTON MEDIUM "ENTER WITH EIDAS" * end * -->
 
 							</div>
 
@@ -107,6 +127,7 @@
 
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/spid-sp-access-button.min.js"></script>
+		<script type="text/javascript" src="js/eidas-sp-access-button.min.js"></script>
 		<script>
 			$(document).ready(function(){
 				var rootList = $("#spid-idp-list-medium-root-post");
